--- a/charts/incubator/answer/Chart.yaml
+++ b/charts/incubator/answer/Chart.yaml
@@ -23,5 +23,5 @@ sources:
 type: application
 version: 0.0.4
 annotations:
-  truecharts.org/catagory: forum
+  truecharts.org/category: forum
   truecharts.org/SCALE-support: "true"
